--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
 
             <div class="about__buttons">
-              <a download="" href="assets\MyCV.pdf" class="button button--flex">
+              <a download="" href="https://www.dropbox.com/scl/fi/3qreyjoej9ha3shrnjc6t/Resume.pdf?rlkey=9ewsrnfg5qpq8zou1kpqsroje&st=y0wujk3w&dl=0f" class="button button--flex">
                 Download CV<i class="fas fa-download button__icon"></i>
               </a>
             </div>
